force-app/main/default/objects/Circle_Account__c/fields/Weekly_Payments_Volume__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payments_Volume__c</fullName>
    <label>Weekly Payments Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>