force-app/main/default/objects/Circle_Account__c/fields/Weekly_Payments_Volume_data_migration__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payments_Volume_data_migration__c</fullName>
    <description>Used to import text values from Hubspot vs currency field in SFDC</description>
    <label>Weekly Payments Volume (data migration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>