force-app/main/default/objects/Circle_Account__c/fields/Withdrawal_Limit__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Limit__c</fullName>
    <description>What is the customer&apos;s withdrawal limit.</description>
    <label>Withdrawal Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>