force-app/main/default/objects/Circle_Account__c/fields/Yield_Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Yield_Application_Submitted_Date__c</fullName>
    <description>Used to date stamp Yield application submitted date</description>
    <label>Yield Application Submitted Date</label>
    <type>Date</type>
</CustomField>