force-app/main/default/objects/Circle_Account__c/recordTypes/Circle.recordType-meta.xml
<RecordType>
    <fullName>Circle</fullName>
    <active>true</active>
    <label>Circle</label>
</RecordType>