force-app/main/default/objects/Circle_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>NAME</columns>
    <columns>Circle_Account_Application_Status__c</columns>
    <columns>Circle_Customer_Id__c</columns>
    <columns>Diameter_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>