force-app/main/default/objects/Circle_Account__c/listViews/My_Circle_Mints_in_PR_PM.listView-meta.xml
<ListView>
    <fullName>My_Circle_Mints_in_PR_PM</fullName>
    <columns>NAME</columns>
    <columns>Current_PR_Status__c</columns>
    <columns>Current_PR_Status_Date__c</columns>
    <columns>PR_Due_Date__c</columns>
    <columns>Latest_RFI_Date__c</columns>
    <columns>Suspension_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_PR_Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Customer_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Logged_In_PM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Circle Mints in PR (PM)</label>
</ListView>